// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar should renders properly with all props 1`] = `
<SearchBar
  description="150 324 предложений"
  endButtons={
    [
      {
        "onClick": [MockFunction],
        "text": "Поиск",
      },
      {
        "onClick": [MockFunction],
        "text": "Отмена",
      },
    ]
  }
  inputMode="tel"
  onChange={[MockFunction]}
  onClear={[MockFunction]}
  placeholder="Найти"
  startButtons={
    [
      {
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "onClick": [MockFunction],
        "text": "Назад",
      },
    ]
  }
  value="Очень длинный запрос в поисковой строке"
  withSearchIcon={false}
>
  <div
    className="root"
  >
    <div
      className="before-field"
    >
      <div
        className="buttons-container"
      >
        <ForwardRef(Button)
          icon={
            {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
          key="0"
          onClick={[MockFunction]}
          text="Назад"
        >
          <div
            aria-label="Назад"
            className="button"
            data-testid="search-bar-button"
            onClick={[MockFunction]}
            role="button"
            tabIndex={0}
          >
            <ForwardRef(ArrowLeftSVG)
              aria-hidden="true"
              fill="#212121"
            >
              <svg
                aria-hidden="true"
                fill="#212121"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <path
                  clipRule="evenodd"
                  d="M11.707 3.293a1 1 0 0 1 0 1.414L4.414 12l7.293 7.293a1 1 0 0 1-1.414 1.414l-8-8a1 1 0 0 1 0-1.414l8-8a1 1 0 0 1 1.414 0Z"
                  fillRule="evenodd"
                />
                <path
                  clipRule="evenodd"
                  d="M3 12a1 1 0 0 1 1-1h17a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1Z"
                  fillRule="evenodd"
                />
              </svg>
            </ForwardRef(ArrowLeftSVG)>
          </div>
        </ForwardRef(Button)>
      </div>
    </div>
    <label
      className="input-wrapper"
      data-testid="search-bar:input-wrapper"
      onMouseDown={[Function]}
    >
      <div
        className="input-container"
      >
        <input
          autoFocus={true}
          className="search-field"
          data-testid="search-bar-input"
          inputMode="tel"
          onChange={[MockFunction]}
          placeholder="Найти"
          tabIndex={0}
          type="text"
          value="Очень длинный запрос в поисковой строке"
        />
        <div
          className="description-container"
        >
          <span
            className="description"
          >
            150 324 предложений
          </span>
        </div>
      </div>
      <button
        aria-label="Очистить"
        className="clear-button"
        data-testid="search-bar:clear-icon"
        onClick={[MockFunction]}
      >
        <ForwardRef(CrossSVG)
          aria-hidden={true}
          fill="#9e9e9e"
        >
          <svg
            aria-hidden={true}
            fill="#9e9e9e"
            height={24}
            viewBox="0 0 24 24"
            width={24}
          >
            <path
              clipRule="evenodd"
              d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10Zm4.95-6.464a1 1 0 1 1-1.414 1.414L12 13.414 8.464 16.95a1 1 0 1 1-1.414-1.414L10.586 12 7.05 8.464A1 1 0 0 1 8.464 7.05L12 10.586l3.536-3.536a1 1 0 1 1 1.414 1.414L13.414 12l3.536 3.536Z"
              fillRule="evenodd"
            />
          </svg>
        </ForwardRef(CrossSVG)>
      </button>
    </label>
    <div
      className="after-field wide-screen"
    >
      <div
        className="buttons-container"
      >
        <ForwardRef(Button)
          key="0"
          onClick={[MockFunction]}
          text="Поиск"
        >
          <div
            className="button"
            data-testid="search-bar-button"
            onClick={[MockFunction]}
            role="button"
            tabIndex={0}
          >
            Поиск
          </div>
        </ForwardRef(Button)>
        <ForwardRef(Button)
          key="1"
          onClick={[MockFunction]}
          text="Отмена"
        >
          <div
            className="button"
            data-testid="search-bar-button"
            onClick={[MockFunction]}
            role="button"
            tabIndex={0}
          >
            Отмена
          </div>
        </ForwardRef(Button)>
      </div>
    </div>
    <div
      className="after-field narrow-screen"
    >
      <div
        className="buttons-container"
      >
        <ForwardRef(Button)
          icon={
            {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
          onClick={[Function]}
          text="Больше"
        >
          <div
            aria-label="Больше"
            className="button"
            data-testid="search-bar-button"
            onClick={[Function]}
            role="button"
            tabIndex={0}
          >
            <ForwardRef(MoreVertSVG)
              aria-hidden="true"
              fill="#212121"
            >
              <svg
                aria-hidden="true"
                fill="#212121"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <path
                  d="M10 5a2 2 0 1 1 4 0 2 2 0 0 1-4 0ZM10 12a2 2 0 1 1 4 0 2 2 0 0 1-4 0ZM12 17a2 2 0 1 0 0 4 2 2 0 0 0 0-4Z"
                />
              </svg>
            </ForwardRef(MoreVertSVG)>
          </div>
        </ForwardRef(Button)>
      </div>
    </div>
  </div>
</SearchBar>
`;

exports[`SearchBar should renders properly with minimal props 1`] = `
<SearchBar
  onChange={[MockFunction]}
>
  <div
    className="root"
  >
    <label
      className="input-wrapper"
      data-testid="search-bar:input-wrapper"
      onMouseDown={[Function]}
    >
      <span
        className="search-icon"
      >
        <ForwardRef(SearchSVG)
          aria-hidden={true}
          fill="#9e9e9e"
        >
          <svg
            aria-hidden={true}
            fill="#9e9e9e"
            height={24}
            viewBox="0 0 24 24"
            width={24}
          >
            <path
              clipRule="evenodd"
              d="M3 11a8 8 0 1 1 16 0 8 8 0 0 1-16 0Zm8-6a6 6 0 1 0 0 12 6 6 0 0 0 0-12Z"
              fillRule="evenodd"
            />
            <path
              clipRule="evenodd"
              d="M15.293 15.293a1 1 0 0 1 1.414 0l5 5a1 1 0 0 1-1.414 1.414l-5-5a1 1 0 0 1 0-1.414Z"
              fillRule="evenodd"
            />
          </svg>
        </ForwardRef(SearchSVG)>
      </span>
      <div
        className="input-container"
      >
        <input
          autoFocus={true}
          className="search-field"
          data-testid="search-bar-input"
          onChange={[MockFunction]}
          placeholder="Поиск"
          tabIndex={0}
          type="text"
        />
      </div>
    </label>
  </div>
</SearchBar>
`;
